Stalling libqof-backend-gda until libgda can support creating tables

--- a/qof/website/hacking.html
+++ b/qof/website/hacking.html
@@ -229,7 +229,8 @@ available storage space.</li>
 own backends for use via QOF.</li>
 <li><b>Future backends</b> : GnomeDB support is expected for a
 future QOF release. This will add a further module which in turn
-allow for other plugins for libgda itself.</li>
+allow for other plugins for libgda itself. (See the notes on <a 
+href="index.html#libgda">libgda module delays</a>.)</li>
 </ul>
 <p>QOF can be packaged separately from the modules but care is needed
 to ensure that existing applications can locate and load the necessary
