--- a/qof/website/index.html
+++ b/qof/website/index.html
@@ -173,7 +173,7 @@ needed, tend to have terrible performance profiles, since the user must wait for
 the query to complete and return data. In other words, QOF provides
 scalability: instead of the all-or-nothing approach, it provides a middle
 ground, allowing small fast apps to access huge databases.</p>
-<p> <b>Status:</b> The GnuCash backend provides access to file and to SQL
+<p id="libgda"><b>Status:</b> The GnuCash backend provides access to file and to SQL
 storage. However, not all of this code has been abstracted out in a generic way
 to be brought back into QOF. Linas has got the major pieces ready to go, in the
 DWI project, but they're not integrated yet. Neil has added support for partial
@@ -184,8 +184,15 @@ using <code>libgda</code> - a data abstraction layer inherited from
 <a href="http://www.gnome-db.org/">Gnome-DB</a> but available for use by 
 non-Gnome applications. This should be able to provide the generic access to 
 various database managers like Postgres, MySQL, SQLite, Oracle and others 
-using ODBC.
-</p></li>
+using ODBC. Unfortunately, although work has begun to use libgda, the current
+gnome-db stable release does not support creating (or deleting) tables. The
+module will be revisited when this support is complete. Note that
+there are known API changes in libgda between the current stable
+libgda2-3 1.2.3 release and the unstable/CVS code. These changes 
+may become more noticeable in the period to the next stable
+release. See the <a 
+href="http://mail.gnome.org/archives/gnome-db-list/2006-September/msg00058.html">
+gnome-db mailing list archive</a>.</p></li>
 <li><p> The current 'client-side' SQL engine is rather basic in its features and
 performance. For example, the current search over object fields is O(N),
 because each object instance is checked for a match. It would be nice to add
