--- a/qof/website/index.html
+++ b/qof/website/index.html
@@ -237,11 +237,17 @@ deb-src http://www.linux.codehelp.co.uk/packages experimental main<br/>
 Please note that these are not the usual quality-assured Debian packages,
 these are only tests - demos if you will.</li></ul>
 <h3>Ubuntu</h3>
-<ul><li>Ubuntu Edgy :
+<ul>
+<li>Ubuntu Dapper: 
+<a href="http://packages.ubuntu.com/dapper/libs/libqof1">[universe]</a>
+has version 0.6.1-1.</li>
+<li>Ubuntu Edgy :
 <a href="http://packages.ubuntu.com/edgy/libs/libqof1">[universe]</a>
-usually at the same version as Debian testing, currently (0.6.4-2).</li>
-<li>Ubuntu Dapper : <a href="http://packages.ubuntu.com/dapper/libs/libqof1">[universe]</a>
-at version 0.6.1-1.</li></ul>
+at version 0.6.4-2.</li>
+<li>Ubuntu Feisty : 
+<a href="http://packages.ubuntu.com/feisty/libs/libqof1">[universe]</a>
+usually at the same version as Debian testing, currently (0.7.1-3).</li>
+</ul>
 <h3>RPM packages</h3>
 <p>There is a sample .spec file available in QOF CVS, available via 
 <a href="http://cvs.sourceforge.net/viewcvs.py/qof/qof/rpm/">SourceForge</a>.
